# cap-x

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: regression-test.md  run-eval.md  skill-library.md
capx/envs/: launch.py  runner.py  trial.py
capx/envs/scripts/: render_isaacsim.py  run_batch.py  (+1 more)
capx/integrations/: __init__.py
capx/llm/: client.py
capx/serving/: launch_contact_graspnet_server.py  launch_sam3_server.py  openrouter_server.py
capx/skills/: library.py
capx/utils/: eval_utils.py  parallel_eval.py
capx/web/: async_trial_runner.py  models.py  server.py  session_manager.py
docs/: behavior-tasks.md  claude-code-integration.md  configuration.md  development.md  libero-tasks.md  rl-training.md
env_configs/cube_lifting/: franka_robosuite_cube_lifting.yaml  franka_robosuite_cube_lifting_multiturn.yaml  franka_robosuite_cube_lifting_multiturn_vdm.yaml  franka_robosuite_cube_lifting_multiturn_vdm_reduced_api.yaml  franka_robosuite_cube_lifting_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_cube_lifting_multiturn_vf.yaml  franka_robosuite_cube_lifting_privileged.yaml  franka_robosuite_cube_lifting_reduced_api.yaml  franka_robosuite_cube_lifting_reduced_api_exampleless.yaml
env_configs/cube_restack/: franka_robosuite_cube_restack.yaml  franka_robosuite_cube_restack_multiturn.yaml  franka_robosuite_cube_restack_multiturn_vdm.yaml  franka_robosuite_cube_restack_multiturn_vdm_reduced_api.yaml  franka_robosuite_cube_restack_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_cube_restack_multiturn_vf.yaml  franka_robosuite_cube_restack_privileged.yaml  franka_robosuite_cube_restack_reduced_api.yaml  franka_robosuite_cube_restack_reduced_api_exampleless.yaml
env_configs/cube_stack/: franka_robosuite_cube_stack.yaml  franka_robosuite_cube_stack_multiturn.yaml  franka_robosuite_cube_stack_multiturn_vdm.yaml  franka_robosuite_cube_stack_multiturn_vdm_reduced_api.yaml  franka_robosuite_cube_stack_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_cube_stack_multiturn_vf.yaml  franka_robosuite_cube_stack_privileged.yaml  franka_robosuite_cube_stack_reduced_api.yaml  franka_robosuite_cube_stack_reduced_api_exampleless.yaml
env_configs/libero/: franka_libero.yaml  franka_libero_cap_agent0.yaml  franka_libero_goal_1.yaml  franka_libero_spatial_0.yaml  libero_spatial_0_vision.yaml
env_configs/nut_assembly/: franka_robosuite_nut_assembly.yaml  franka_robosuite_nut_assembly_multiturn.yaml  franka_robosuite_nut_assembly_multiturn_vdm.yaml  franka_robosuite_nut_assembly_multiturn_vdm_reduced_api.yaml  franka_robosuite_nut_assembly_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_nut_assembly_multiturn_vf.yaml  franka_robosuite_nut_assembly_privileged.yaml  franka_robosuite_nut_assembly_reduced_api.yaml  franka_robosuite_nut_assembly_reduced_api_exampleless.yaml
env_configs/r1pro/: r1pro_pick_up_radio.yaml  r1pro_pick_up_radio_multiturn_vdm.yaml  r1pro_pick_up_radio_oracle.yaml  r1pro_pick_up_trash.yaml  r1pro_pick_up_trash_multiturn_vdm.yaml  r1pro_pick_up_trash_oracle.yaml
env_configs/real/: real.yaml  real_qwen_exps.yaml
env_configs/spill_wipe/: franka_robosuite_spill_wipe.yaml  franka_robosuite_spill_wipe_multiturn.yaml  franka_robosuite_spill_wipe_multiturn_vdm.yaml  franka_robosuite_spill_wipe_multiturn_vdm_reduced_api.yaml  franka_robosuite_spill_wipe_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_spill_wipe_multiturn_vf.yaml  franka_robosuite_spill_wipe_privileged.yaml  franka_robosuite_spill_wipe_reduced_api.yaml  franka_robosuite_spill_wipe_reduced_api_exampleless.yaml
env_configs/two_arm_handover/: two_arm_handover.yaml  two_arm_handover_multiturn.yaml  two_arm_handover_multiturn_vdm.yaml  two_arm_handover_multiturn_vdm_legacy.yaml  two_arm_handover_multiturn_vf.yaml  two_arm_handover_privileged.yaml  two_arm_handover_reduced.yaml  two_arm_handover_reduced_exampleless.yaml
env_configs/two_arm_lift/: franka_robosuite_two_arm_lift.yaml  franka_robosuite_two_arm_lift_multiturn.yaml  franka_robosuite_two_arm_lift_multiturn_vdm.yaml  franka_robosuite_two_arm_lift_multiturn_vdm_reduced_api.yaml  franka_robosuite_two_arm_lift_multiturn_vdm_reduced_api_skill_lib.yaml  franka_robosuite_two_arm_lift_multiturn_vf.yaml  franka_robosuite_two_arm_lift_privileged.yaml
scripts/: experiment_goal_stove.sh  experiment_object_swap.sh  experiment_privileged_goal.sh  run_experiment_now.sh  start_servers_and_eval.sh  test_libero_privileged.sh  test_libero_prompt.sh  train_franka_grpo.sh
scripts/eval_analysis/: compile_skill_library.py  parse_outputs.py  summarize_analysis.py
web-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web-ui/src/: App.tsx  index.css
(+78 files in other folders)
